--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> Sam's Javascript Page </title> 
 </head>
 <body>
-<img src="csc106_banner.jpg">
+<img src= "csc106_banner.jpeg">
 <h1> My Javascript </h1>
 Back to <a href="index.html"> home page </a>
 </body>
