--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <title> Sam's Javascript Page </title> 
 </head>
 <body>
-  <a> <img src= "csc106_banner.jpeg" > </a>
+<img src= "csc106_banner.jpeg" > 
+<img src= "pasted image 0.png" >
+<img src= "pasted image 1.png" >
+<img src= "pasted image 2.png" >
 <h1> My Javascript </h1>
 Back to <a href="index.html"> home page </a>
 </body>
