--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title> Sam's Javascript Page </title> 
+  <h1> Welcome to my Page! </h1>
 </head>
 <body>
 <img src= "csc106_banner.jpeg" > 
