--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <img src= "csc106_banner.jpeg" > 
-  <br>
-<img src= "pasted image 0.png" >
-<img src= "pasted image 1.png" >
-  <img src= "pasted image 2.png" > 
-  </br>
+
+<br> <img src= "pasted image 0.png" > </br>
+<br> <img src= "pasted image 1.png" > </br>
+<br> <img src= "pasted image 2.png" > </br>
+
 <h1> My Javascript </h1>
 Back to <a href="index.html"> home page </a>
 </body>
