--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <title> Sam's Javascript Page </title> 
-  <h1> Welcome to my Page! </h1>
 </head>
 <body>
 <img src= "csc106_banner.jpeg" > 
@@ -12,7 +11,7 @@
 <br> <img src= "pasted image 1.png" > </br>
 <br> <img src= "pasted image 2.png" > </br>
 
-<h1> My Javascript </h1>
+<h1> Welcome to my page! </h1>
 Back to <a href="index.html"> home page </a>
 </body>
 </html>
