--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <br>
 <img src= "pasted image 0.png" > 
 <img src= "pasted image 1.png" > 
-<img src= "pasted image 2.png" > 
-</br>
+<img src= "pasted image 2.png" > </br>
 
 <h1> Welcome to my page! </h1>
 Back to <a href="index.html"> home page </a>
