--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <img src= "csc106_banner.jpeg" > 
 
-<br>
-<img src= "pasted image 0.png" > 
+
+<br> <img src= "pasted image 0.png" > 
 <img src= "pasted image 1.png" > 
 <img src= "pasted image 2.png" > </br>
 
