--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <img src= "csc106_banner.jpeg" > 
 
-<img src= "pasted image 0.png" > 
+<br> <img src= "pasted image 0.png" > 
 <img src= "pasted image 1.png" > 
-<img src= "pasted image 2.png" > 
+  <img src= "pasted image 2.png" > </br>
 
 <h1> Welcome to my page! </h1>
 Back to <a href="index.html"> home page </a>
