--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 <img src= "csc106_banner.jpeg" > 
-
-<br> <img src= "pasted image 0.png" > 
+  
+<table>
+  <thead>
+    <tr>
+      <td> <img src= "pasted image 0.png" > </td> 
 <img src= "pasted image 1.png" > 
   <img src= "pasted image 2.png" > </br>
 
