--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <thead>
     <tr>
       <td> <img src= "pasted image 0.png" > </td> 
-<img src= "pasted image 1.png" > 
-  <img src= "pasted image 2.png" > </br>
+      <td> <img src= "pasted image 1.png" > </td>
+      <td> <img src= "pasted image 2.png" > </td>
+    </tr>
+    </tbody>
+  </table>
 
 <h1> Welcome to my page! </h1>
 Back to <a href="index.html"> home page </a>
