--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <td> <img src= "pasted image 1.png" > </td>
       <td> <img src= "pasted image 2.png" > </td>
     </tr>
+    </thead>
     </tbody>
   </table>
 
