--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </table>
 
 <h1> Welcome to my page! </h1>
+<h5> My name is Sam Clements and I am a sophomore here at URI. This page contains information about myself as well as Javascript 
 Back to <a href="index.html"> home page </a>
 </body>
 </html>
