--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </table>
 
 <h1> Welcome to my page! </h1>
-<h5> My name is Sam Clements and I am a sophomore here at URI. This page contains information about myself as well as Javascript 
+<h5> My name is Sam Clements and I am a sophomore here at URI. This page contains three separate webpages: This one, this introductory page, a page
+ with information about myself, and a page containing hyperlinks to Javascript programs that I have put together. Thank you for visiting my page and I 
+  hope you enjoy. </h5>
 Back to <a href="index.html"> home page </a>
 </body>
 </html>
