--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
 <h1> Welcome to my page! </h1>
 <h5> My name is Sam Clements and I am a sophomore here at URI. This page contains three separate webpages: This one, this introductory page, a page
- with information about myself, and a page containing hyperlinks to Javascript programs that I have put together. Thank you for visiting my page and I 
-  hope you enjoy. </h5>
+ with information about myself, and a page containing hyperlinks to Javascript <br>
+  programs that I have put together. </br>
+  Thank you for visiting my page and I 
+  hope you enjoy this page. </h5>
 Back to <a href="index.html"> home page </a>
 </body>
 </html>
