--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
 <h1> Welcome to my page! </h1>
 <h5> My name is Sam Clements and I am a sophomore here at URI. This page contains three separate webpages: This one, this introductory page, a page
- with information about myself, and a page containing hyperlinks to Javascript <br>
-  programs that I have put together. </br>
-  Thank you for visiting my page and I 
-  hope you enjoy this page. </h5>
+ with information about myself, and a page containing hyperlinks to Javascript
+ programs that I have put together. Thank you for visiting and I hope you enjoy this page. </h5>
 
 </body>
 </html>
