--- a/about.html
+++ b/about.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html> 
+<html> 
+<head>
+<meta charset="utf-8">
+<title> Sam's Javascript Page </title> 
+</head>
+<body>
+<img src= "csc106_banner.jpeg" > 
+  
+<table>
+  <thead>
+    <tr>
+      <td> <img src= "pasted image 0.png" > </td> 
+      <td> <img src= "pasted image 1.png" > </td>
+      <td> <img src= "pasted image 2.png" > </td>
+    </tr>
+    </thead>
+    </tbody>
+  </table>
 
+Back to <a href="index.html"> home page </a>
+</body>
+</html>
