--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <table>
   <thead>
     <tr>
-      <td> <img src= "pasted image 0.png" > </td> 
+      <td> <a href="https://sclements8.github.io/index.html<img src= "pasted image 0.png" > </a> </td> 
       <td> <img src= "pasted image 1.png" > </td>
       <td> <img src= "pasted image 2.png" > </td>
     </tr>
