--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <td><a href="https://sclements8.github.io/index.html"><img src= "pasted image 0.png"></a></td> 
       <td><a href="https://sclements8.github.io/javascripts.html"><img src= "pasted image 1.png"></a></td>
-      <td><a href="https://sclements8.github.io/index.about.html"><img src= "pasted image 2.png"></a></td>
+      <td><a href="https://sclements8.github.io/about.html"><img src= "pasted image 2.png"></a></td>
     </tr>
     </thead>
     </tbody>
