--- a/about.html
+++ b/about.html
@@ -10,14 +10,17 @@
 <table>
   <thead>
     <tr>
-      <td> <img src= "pasted image 0.png" > </td> 
-      <td> <img src= "pasted image 1.png" > </td>
-      <td> <img src= "pasted image 2.png" > </td>
+      
+      <td><a href="https://sclements8.github.io/index.html"><img src= "pasted image 0.png"></a></td> 
+      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "pasted image 1.png"></a></td>
+      <td><a href="https://sclements8.github.io/about.html"><img src= "pasted image 2.png"></a></td>
+      
     </tr>
     </thead>
     </tbody>
   </table>
 
-Back to <a href="index.html"> home page </a>
+<h1> About Me </h1>
+
 </body>
 </html>
