--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title> Sam's Javascript Page </title> 
+<style> 
+  body { background-color: rgb(88,190,29); }  p { color: rgb(1, 84, 92); } 
+        h1 { color: rgb(2,39,18); }  </style>
 </head>
 <body>
-<img src= "csc106_banner.jpeg" > 
+<img src= "myBANNER_jpg" > 
   
 <table>
   <thead>
