--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         h1 { color: rgb(1,1,1); }  </style>
 </head>
 <body>
-<img src= "myBANNER_jpg" > 
+<img src= "https://drive.google.com/file/d/1Q73LsLD0NRR_b4s9p2g7DvP00dssx8Az/view"> 
   
 <table>
   <thead>
