--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         h1 { color: rgb(1,1,1); }  </style>
 </head>
 <body>
-<img src= "myBANNER.jpg"> 
+<img src= "ClementsBANNER.jpg"> 
   
 <table>
   <thead>
