--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title> Sam's Javascript Page </title> 
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <style> 
   body { background-color: rgb(80,130,29); }  p { color: rgb(1, 1, 1); } 
         h1 { color: rgb(1,1,1); }  </style>
@@ -25,7 +26,7 @@
 
 <h1> Welcome to my page! </h1>
 <h4> <p> My name is Sam Clements and I am a sophomore here at URI. This page 
- contains three separate webpages: This one, this introductory page, a page
+ contains four separate webpages: This one, this introductory page, a page
  with information about myself, and a page containing hyperlinks to 
  Javascript programs that I have put together. Thank you for visiting 
  and I hope you enjoy this page. <p> </h4>
