--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         h1 { color: rgb(1,1,1); }  </style>
 </head>
 <body>
-<img src= "csc106_banner.jpg"> 
+<img src= "myBANNER.jpeg"> 
   
 <table>
   <thead>
