--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <thead>
     <tr>
       
-      <td><a href="https://sclements8.github.io/index.html"><img src= "pasted image 0.png"></a></td> 
-      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "pasted image 1.png"></a></td>
-      <td><a href="https://sclements8.github.io/about.html"><img src= "pasted image 2.png"></a></td>
+      <td><a href="https://sclements8.github.io/index.html"><img src= "home.png"></a></td> 
+      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "javascripts.png"></a></td>
+      <td><a href="https://sclements8.github.io/apps.html"><img src= "apps.png"></a></td>
+      <td><a href="https://sclements8.github.io/about.html"><img src= "about.png"></a></td>
       
     </tr>
     </thead>
