--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <thead>
     <tr>
       
-      <td><a href="https://sclements8.github.io/index.html"><img src= "home.png"></a></td> 
+      <td><a href="https://sclements8.github.io/index.html"><img src= "home.png" width="50"></a></td> 
       <td><a href="https://sclements8.github.io/javascripts.html"><img src= "javascripts.png"></a></td>
       <td><a href="https://sclements8.github.io/apps.html"><img src= "apps.png"></a></td>
       <td><a href="https://sclements8.github.io/about.html"><img src= "about.png"></a></td>
