--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
         h1 { color: rgb(1,1,1); }  </style>
 </head>
 <body>
-<img src= "myBANNER.jpg" width="440"> 
+<img src= "myBANNER.jpg" width="600"> 
   
 <table>
   <thead>
     <tr>
       
       <td><a href="https://sclements8.github.io/index.html"><img src= "home.png" width="235"></a></td> 
-      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "javascripts.png"></a></td>
-      <td><a href="https://sclements8.github.io/apps.html"><img src= "apps.png"></a></td>
-      <td><a href="https://sclements8.github.io/about.html"><img src= "about.png"></a></td>
+      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "javascripts.png" width="235"></a></td>
+      <td><a href="https://sclements8.github.io/apps.html"><img src= "apps.png" width="235"></a></td>
+      <td><a href="https://sclements8.github.io/about.html"><img src= "about.png" width="235"></a></td>
       
     </tr>
     </thead>
