--- a/apps.html
+++ b/apps.html
@@ -1,25 +1,29 @@
-<!DOCTYPE html> 
 <html> 
 <head>
 <meta charset="utf-8">
-<title> Apps </title> 
+<title> Sam's Javascript Page </title> 
 <style> 
   body { background-color: rgb(80,130,29); }  p { color: rgb(1, 1, 1); } 
         h1 { color: rgb(1,1,1); }  </style>
 </head>
 <body>
-<img src= "myBANNER.jpg"> 
+<img src= "myBANNER.jpg" width="960"> 
   
 <table>
   <thead>
     <tr>
       
-      <td><a href="https://sclements8.github.io/index.html"><img src= "home.png"></a></td> 
-      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "javascripts.png"></a></td>
-      <td><a href="https://sclements8.github.io/apps.html"><img src= "apps.png"></a></td>
-      <td><a href="https://sclements8.github.io/about.html"><img src= "about.png"></a></td>
+      <td><a href="https://sclements8.github.io/index.html"><img src= "home.png" width="235"></a></td> 
+      <td><a href="https://sclements8.github.io/javascripts.html"><img src= "javascripts.png" width="235"></a></td>
+      <td><a href="https://sclements8.github.io/apps.html"><img src= "apps.png" width="235"></a></td>
+      <td><a href="https://sclements8.github.io/about.html"><img src= "about.png" width="235"></a></td>
       
     </tr>
     </thead>
     </tbody>
   </table>
+
+<h1> Apps </h1>
+
+</body>
+</html>
