--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <h1> Welcome to my page! </h1>
 <h4> <p> My name is Sam Clements and I am a sophomore here at URI. This page 
  contains four separate webpages: This one, this introductory page, a page
- with information about myself, and a page containing hyperlinks to 
- Javascript programs that I have put together. Thank you for visiting 
- and I hope you enjoy this page. <p> </h4>
+ with information about myself, a page containing apps I have developed in this course 
+ and a page containing hyperlinks to Javascript programs that I have put together. Thank 
+ you for visiting and I hope you enjoy this page. <p> </h4>
 
 </body>
 </html>
