--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
   that </br> have streamed on ESPN. <p> 
   
   <p> I have been playing ice hockey ever since I was six years old, and am a big fanatic  of the hometown Bruins. I enjoy traveling, and have traveled 
-  all across the country in places such as Hawaii, New York City, Washington DC and the Rocky Mountains. <p> </h4>
+  <br> all across the country in places such as Hawaii, New York City, Washington DC and the Rocky Mountains. </br> <p> </h4>
   
   
 
