--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
   <p> I have been playing ice hockey ever since I was six years old, and am a big fanatic  of the hometown Bruins. I enjoy traveling, and have traveled 
   <br> all across the country in places such as Hawaii, New York City, Washington DC and the Rocky Mountains. </br> <p> </h4>
   
-  <img src= "NYC.jpg" width="235">
-  <img src= "Me.jpg" width="235">
   <img src= "Hawaii.jpg" width="235">
-  <img src= "Empire.jpg" width="235">
+  <img src= "Me.jpg" width="235">
+  <img src= "Hawaii2.jpg" width="235">
+  <img src= "Liberty.jpg" width="235">
 
 </body>
 </html>
