--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
   <p> I have been playing ice hockey ever since I was six years old, and am a big fanatic  of the hometown Bruins. I enjoy traveling, and have traveled 
   <br> all across the country in places such as Hawaii, New York City, Washington DC and the Rocky Mountains. </br> <p> </h4>
   
-  <img src= "hawaii.jpg" width="235">
+  <img src= "shore.jpg" width="235">
   <img src= "me.jpg" width="235">
-  <img src= "hawaii2.jpg" width="235">
+  <img src= "volcano.jpg" width="235">
   <img src= "liberty.jpg" width="235">
 
 </body>
