--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
   
   <img src= "me.jpg" width="235">
   <img src= "liberty.jpg" width="235">
+  <img src= "clements.jpg" width="235">
 
 </body>
 </html>
