--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
   <img src= "me.jpg" width="235">
   <img src= "liberty.jpg" width="235">
   <img src= "clements.jpg" width="235">
+  <img src= "volcano.jpg" width="235">
 
 </body>
 </html>
