--- a/javascripts.html
+++ b/javascripts.html
@@ -23,6 +23,8 @@
     </tbody>
   </table>
   <h1> Javascripts </h1>
+  <h2> This page contains javascript programs that I have written for my CSC106 class. 
   <h2><a href="https://www.khanacademy.org/computer-programming/clements_bitmoji/5716547164749824">clements_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/clements_bitmoji/5716547164749824/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></h2>
+  
 </body>
 </html>
