--- a/javascripts.html
+++ b/javascripts.html
@@ -24,7 +24,7 @@
   </table>
   <h1> Javascripts </h1>
   <h2> This page contains javascript programs that I have written for my CSC106 class. 
-  <h2><a href="https://www.khanacademy.org/computer-programming/clements_bitmoji/5716547164749824">clements_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/clements_bitmoji/5716547164749824/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></h2>
-  
-</body>
+  <h3><a href="https://www.khanacademy.org/computer-programming/clements_bitmoji/5716547164749824">clements_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/clements_bitmoji/5716547164749824/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></h2>
+  <h3><a href="https://www.khanacademy.org/computer-programming/clements_dancingbitmoji/4757816646090752">"clements_dancingbitmoji"</a></h2><script src="https://www.khanacademy.org/computer-programming/clements_dancingbitmoji/4757816646090752/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></h3>
+  <h3><a href="https://www.khanacademy.org/computer-programming/spin-off-of-clements_racingbitmoji/5672068483432448">Spin-off of ""clements_racingbitmoji""</a></h2><script src="https://www.khanacademy.org/computer-programming/spin-off-of-clements_racingbitmoji/5672068483432448/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></h3>
 </html>
