--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <title> Sam's About Me Page </title> 
 <style> 
   body { background-color: rgb(80,130,29); }  p { color: rgb(1, 1, 1); } 
-        h1 { color: rgb(1,1,1); }  </style>
+        { color: rgb(1,1,1); }  </style>
 </head>
 <body>
 <img src= "myBANNER.jpg" width="960"> 
